--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Rachel Young</title>
   </head>
 <body>
-  <h1>Rachel Young</h1>
-  <h2>What's up guys, my name is Rachel.</h2>
+</br>
+</br>
+  <h1 style="center">Rachel Young</h1>
+  <h2 style="center">What's up guys, my name is Rachel.</h2>
 </body>
