--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
 </br>
 </br>
-  <h1 style="center">Rachel Young</h1>
-  <h2 style="center">What's up guys, my name is Rachel.</h2>
+  <h1>Rachel Young</h1>
+  <h2>What's up guys, my name is Rachel.</h2>
 </body>
